Aggregator прошел тесты, отлажен